
	* src/win32/MapView.cpp (renderTextScreen): fixed rendering when 512x512
	* src/win32/MapView.cpp (GetTextClickAddress): fixed click address for text screens when size > 256

2003-07-16  Forgotten  <forgotten@users.sourceforge.net>

	* src/Sound.cpp (soundEvent): fix sound envelope bug when set to 0

2003-07-15  Forgotten  <forgotten@users.sourceforge.net>

	* src/SDL.cpp: added save type NONE support
	* src/win32/Win32.cpp (helpBugReport): fixed bug with bug report when emulating GB/GBC program

2003-07-13  Forgotten  <forgotten@users.sourceforge.net>

	* src/Util.cpp (utilGBAFindSave): added enhanced save type detection

2003-07-09  Forgotten  <forgotten@users.sourceforge.net>
	* src/SDL.cpp: rewind default to disabled
	* src/win32/Win32.cpp: rewind default to disabled
	* src/win32/RewindInterval.cpp (OnOk): allow a rewind interval between 0 and 600 seconds - 0 to disable it
	* src/win32/Win32.cpp (fileMoviePlay): put a warning when playing a movie
	* src/GBA.cpp (CPUReadState): fix sound problem loading old save states

2003-07-08  Forgotten  <forgotten@users.sourceforge.net>

	* src/armdis.cpp: fixed thumb disassembly bug
	* src/win32/Win32.cpp: fix rewind enable and reset when loading a game
	* src/win32/Reg.cpp (regQueryBinaryValue): fix problem saving binary settings into INI

2003-07-05  Forgotten  <forgotten@users.sourceforge.net>

	* src/Mode0.cpp (mode0RenderLineAll): fixed priority between OBJ Win and Windows
	* src/Mode1.cpp (mode0RenderLineAll): fixed priority between OBJ Win and Windows	
	* src/Mode2.cpp (mode0RenderLineAll): fixed priority between OBJ Win and Windows
	* src/Mode3.cpp (mode0RenderLineAll): fixed priority between OBJ Win and Windows
	* src/Mode4.cpp (mode0RenderLineAll): fixed priority between OBJ Win and Windows
	* src/Mode5.cpp (mode0RenderLineAll): fixed priority between OBJ Win and Windows
	
2003-07-04  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp: menu toggle can have a customizable accelerator