@@ -14,7 +14,7 @@ case "$target" in
                 ;;
 esac
 
-AM_INIT_AUTOMAKE(VisualBoyAdvance, 1.5.1)
+AM_INIT_AUTOMAKE(VisualBoyAdvance, 1.6)
 
 AC_ARG_ENABLE(gp,
 [  --enable-gp             enable GP32 emulation (default is NO)],
@@ -41,8 +41,6 @@ AC_ARG_WITH(profiling,
 ac_cv_use_prof=$withval, ac_cv_use_prof=yes)
 AC_CACHE_CHECK(whether to enable profiling, ac_cv_use_prof, ac_cv_use_prof=yes)
 
-PACKAGE=VisualBoyAdvance
-VERSION=1.5
 CCC="gcc  c++ g++ CC cxx cc++ cl"
 dnl Checks for programs.
 AC_PROG_CC
@@ -70,7 +68,7 @@ AC_CHECK_LIB(z, gzopen,,AC_MSG_ERROR(Cannot compile without libz))
 dnl Checks for header files.
 AC_PATH_X
 AC_HEADER_STDC
-AC_CHECK_HEADERS(malloc.h strings.h unistd.h arpa/inet.h netinet/in.h)
+AC_CHECK_HEADERS(malloc.h strings.h unistd.h arpa/inet.h netinet/in.h zutil.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
